tekton/workflows/resource-configure/resources/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-ui
  namespace: tekton-pipelines
spec:
  ingressClassName: nginx
  rules:
    - host: tekton-ui.cnoe.localtest.me
      http:
        paths:
          - backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
            path: /
            pathType: Prefix
